--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,58 @@
 body {
 
+animation: GoBackground 10s linear infinite;
 background: #000 url(../img/bg.jpg) repeat-x 0 0;
 height: 100%; 
+}
+
+#container {
     
+    margin: 270px;
+    width: 1000px;
+    overflow: hidden;
+}
+
+#car-body {
+
+    background: url(../img/body.png) no-repeat;
+    width: 490px;
+    height: 170px;
+    margin: auto;
+}
+
+#wheel-front {
+    animation: GoWheel 5s linear 0s infinite; 
+    background: url(../img/wheel.png) no-repeat; 
+    float: left;
+    height: 80px;
+    width: 80px;
+    margin-left: 279px; 
+    margin-top: -75px;
+}
+
+#wheel-back {
+    animation: GoWheel 5s linear 0s infinite; 
+    background: url(../img/wheel.png) no-repeat; 
+    float: right;
+    height: 80px;
+    width: 80px;
+    margin-right: 304px; 
+    margin-top: -75px;
+}
+
+@keyframes GoWheel {
+    
+    0%{transform:rotate(0deg)}
+    100%{transform:rotate(-360deg)}
+}
+
+@keyframes GoBackground {
+    
+    0%{background-position: 0px 0px;}
+    100%{background-position: 1000px 0px;}
+}
+
+.pause {
+    
+    animation-play-state: paused !important; 
 }
